# smsta

./: .dockerignore  .editorconfig  .env.example  .eslintrc.js  .gitignore  .pylintrc  Dockerfile  Jenkinsfile  LICENSE  Makefile  docker-compose.yml  package.json  postcss.config.js  pyproject.toml  setup.cfg  vue.config.js
.config/: gunicorn.service  gunicorn.socket  nginx.conf  robots.txt
.config/docker/: nginx.conf
backend/apps/api/auth/: admin.py  models.py
backend/apps/api/documents/: __init__.py  apps.py  urls.py
backend/apps/api/other/: __init__.py  apps.py  enums.py  utils.py
backend/apps/api/system/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py
backend/apps/core/api/: urls.py  views.py
backend/apps/core/main/: urls.py  views.py
backend/apps/core/utils/: admin.py  template.py
backend/config/: urls.py
backend/config/settings/: __init__.py  custom.py
backend/config/settings/base/: apps.py  environment.py  middlewares.py
backend/config/settings/components/: __init__.py  auth.py  constance.py  (+4 more)
frontend/js/: app.js
frontend/js/components/: index.js
frontend/js/lang/: en.json  ru.json
frontend/js/layouts/: default.vue  empty.vue
frontend/js/middleware/: admin.js  auth.js  staff.js
frontend/js/pages/: home.vue  profile.vue  test.vue
frontend/js/plugins/: axios.js  i18n.js  iconfont.js  index.js  vuetify.js
frontend/js/router/: index.js  routes.js
frontend/js/store/: mutation-types.js
frontend/js/utils/: router-include.js
frontend/sass/abstracts/: _index.sass  _mixins.sass  _variables.sass
frontend/sass/base/: _base.sass  _fonts.sass
frontend/sass/components/: _home.sass  _index.sass
frontend/sass/pages/: _index.sass  _login.sass
frontend/sass/vendors/: _index.sass
frontend/templates/: app.html  base.html
frontend/templates/admin/: base_site.html
frontend/templates/components/: noscript.html
frontend/templates/docx/: group-card.docx  group-list.docx  tutor-journal.docx
public/: .gitignore
(+69 files in other folders)
